--- a/src/www/css/privacytool.css
+++ b/src/www/css/privacytool.css
@@ -2,6 +2,13 @@
 General styling and overrule some Geonovum styles
 ****************************** */
 
+/*
+
+green: #97c000;
+
+*/
+
+
 html {
     font-size: 1.0em;
 }
@@ -10,6 +17,23 @@ hgroup {
     display: none;
 } 
 
+
+#sidemenu {
+    background-color: #97c000;
+    color: white;
+    padding: 0.5em;
+    position: fixed;
+    right: 0;
+    top: 10%;
+    border-radius: 0.5em 0em 0em 0.5em;
+}
+
+#sidemenu a {
+    color: white;
+    font-size: 0.9em;
+    font-weight: bold;
+
+}
 #content-header {
     text-align: center;
 }
@@ -75,12 +99,12 @@ Styling of the questionaire and tabs
 #toolform section {
     min-height: 420px;
 }
+
 #toolform .steps li, #toolform .actions li, a.btn  {    
     padding: 0.5em 1em;
     margin-bottom: 0.5em;
     border-radius: 0.3em;
 }
-
 
 #toolform .steps > ul, #toolform .actions > ul {
     list-style-type: none;
@@ -114,8 +138,12 @@ fieldset > div {
     padding-bottom: 1.5em;
 }
 
-.inputarea {
+.radioQuestion .inputarea {
     float: right;
+}
+
+.textQuestion .inputarea {
+    width: 100%;
 }
 
 .conditionalQuestion {
@@ -131,13 +159,55 @@ fieldset > div {
     border: 1px solid #888888; 
     background-color: #cccccc;
     margin: 0.5em;
-    font-size: 0.8em;
+    padding: 0.5em;
+    font-size: 0.9em;   
 }
 
 #voorvragen {
     display: none;
 }
 
+/* Intake vragen */
+
+.textQuestion label {
+    display: inline;
+    font-weight: normal;
+}
+
+textarea {
+    height: 12em;
+    width: 100%;
+}
+
+#intakecopy {
+    display: none;
+    border: 1px solid #cccccc;
+    background-color: #97c000;
+    color: #ffffff;
+    padding: 1em;
+    border-radius: 0.5em 0em 0em 0.5em;
+    position: fixed;
+    width: 50%;
+    max-height: 90%;
+    overflow: scroll;
+    right: 0px;
+    top: 5%;
+}
+
+#intakecopy textarea {
+    background-color: #eeeeee;
+    border: medium none;
+    color: #222222;
+    width: 95%;
+}
+
+#intakecopy button {
+    position: fixed;
+    right: 1%;
+    top: 10%;
+}
+
+/* begrippenlijst */
 #toolform , #begrippenlijst {
     /* display: none; */
     background-color: #eeeeee;
@@ -182,7 +252,7 @@ Steps styling
     background-color: #cccccc;
     float: left; /* for horizontal */
     margin-right: 0.5em; /* for horizontal */
-    width: 130px; /* for horizontal */
+    width: 190px; /* for horizontal */
 }
 
 #toolform .steps a  {
@@ -244,3 +314,28 @@ Actions
 }
 
 
+/* 
+
+PRINT OVERRIDES
+
+*/
+
+@media print {
+    html {
+        font-size: 0.7em;
+        line-height: 1.0em;
+    }
+
+    a.btn, #sidemenu, #intakecopy {
+        display: none !important;
+    }
+
+    section, div.conditionalQuestion, {
+        display: block !important;
+    }
+
+    div.steps, div.actions {
+        display: none  !important;
+    }
+
+}
