--- a/src/www/css/privacytool.css
+++ b/src/www/css/privacytool.css
@@ -21,20 +21,22 @@ hgroup {
 
 
 #sidemenu {
-    background-color: #97c000;
-    color: white;
-    padding: 0.5em;
+    background-color: #007bb8;
+    border-radius: 0.5em 0 0 0.5em;
     position: fixed;
     right: 0;
     top: 10%;
-    border-radius: 0.5em 0em 0em 0.5em;
+    font-size: 0.9em;
 }
 
 #sidemenu a {
     color: white;
     font-size: 0.9em;
     font-weight: bold;
+}
 
+#sidemenu button {
+    width: 100%;
 }
 
 #alert {
@@ -50,11 +52,17 @@ hgroup {
     box-shadow: 1em 1em 1em;
 }
 
+#sidemenu ul {
+    list-style-type: none;
+    padding: 0px;
+    margin: 0.3em;
+}
 
 #uploadarea {
     display: none;
     border: 2px solid #007bb8;
     background-color: white;    
+    box-shadow: 1em 1em 2em #888888;
     position: fixed;
     overflow: none;
     padding: 1em;
@@ -62,11 +70,11 @@ hgroup {
     width: 40%;
     left: 30%;
     height: auto;
-    box-shadow: 1em 1em 2em #888888;
+    
 }
 
 
-#uploadarea > button, #alert > button {
+#uploadarea > button, #alert > button, #begrippenlijstcopy > button {
     float: right;
 }
 
@@ -224,21 +232,22 @@ textarea {
     width: 100%;
 }
 
-#intakecopy {
+#intakecopy, #begrippenlijstcopy {
     display: none;
-    border: 1px solid #cccccc;
-    background-color: #97c000;
-    color: #ffffff;
+    border: 2px solid #007bb8;
+    background-color: white;    
+    box-shadow: 1em 1em 2em #888888;
     padding: 1em;
     border-radius: 0.5em 0em 0em 0.5em;
     position: fixed;
-    width: 50%;
+    width: 40%;
     max-height: 90%;
-    overflow: scroll;
-    right: 0px;
+    min-height: 30%;
+    overflow-y: scroll;
+    right: 0;
     top: 5%;
+    z-index: 2;
 }
-
 
 #intakecopy textarea {
     background-color: #eeeeee;
