--- a/src/www/css/privacytool.css
+++ b/src/www/css/privacytool.css
@@ -60,7 +60,7 @@ p {
 }
 
 #sidemenu {
-    background-color: #007bb8;
+    background-color: #ebeced; /*#007bb8;*/
     border-radius: 0.5em 0 0 0.5em;
     position: fixed;
     right: 0;
@@ -69,12 +69,17 @@ p {
 }
 
 #sidemenu a {
-    color: white;
+    background: #97c000 none repeat scroll 0 0;
+    border-radius: 5px;
+    color: #2e2d2d;
     font-size: 0.9em;
-    font-weight: bold;
+    height: 1.5em;
+    line-height: 1.5em;
+    padding: 2px 16px;
+    text-decoration: none;
 }
 
-#sidemenu button {
+#sidemenu li > button {
     width: 100%;
 }
 
@@ -437,7 +442,7 @@ Actions
 }
 
 
-.checkboxIntro > button, .radioQuestion button, #descriptions button {
+.checkboxIntro > button, .radioQuestion button, #descriptions button, #sidemenu button {
     background-color: #007bb8;
     color: white;
     font-size: 0.9em;
