kopieer antwoorden naar divs voor rapport en printen

--- a/src/www/css/privacytool.css
+++ b/src/www/css/privacytool.css
@@ -663,7 +663,7 @@ PRINT OVERRIDES
     .radioQuestion { padding-bottom: 2em; }
 
     .copyAnswer{display: block;}
-    .inputarea textarea {width:90%}
+    .inputarea textarea {display: none;}
 
     .extrainfo {display: none;}
 
